// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Complex Layout Snapshots > should match snapshot for badge collection 1`] = `
<div>
  <div
    class="flex gap-2 flex-wrap"
  >
    <span
      class="inline-flex items-center gap-1 px-2.5 py-1 rounded-full text-xs font-semibold bg-[var(--success-bg)] text-[var(--success)] border border-[var(--success-border)] "
    >
      Live
    </span>
    <span
      class="inline-flex items-center gap-1 px-2.5 py-1 rounded-full text-xs font-semibold bg-[var(--warning-bg)] text-[var(--warning)] border border-[var(--warning-border)] "
    >
      Pending
    </span>
    <span
      class="inline-flex items-center gap-1 px-2.5 py-1 rounded-full text-xs font-semibold bg-[var(--danger-bg)] text-[var(--danger)] border border-[var(--danger-border)] "
    >
      Error
    </span>
    <span
      class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-[var(--surface-2)] border border-[var(--border)] text-sm text-[var(--text)] "
    >
      Ethereum
    </span>
    <span
      class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-[var(--surface-2)] border border-[var(--border)] text-sm text-[var(--text)] "
    >
      Base
    </span>
    <span
      class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-[var(--surface-2)] border border-[var(--border)] text-sm text-[var(--text)] "
    >
      Polygon
    </span>
  </div>
</div>
`;

exports[`Complex Layout Snapshots > should match snapshot for card grid 1`] = `
<div>
  <div
    class="grid grid-cols-2 gap-4"
  >
    <div
      class="card bg-[var(--surface)] border border-[var(--border)] rounded-[var(--radius-lg)] shadow-card transition-all p-6 "
    >
      <header
        class="flex items-start justify-between gap-3 mb-4"
      >
        <div>
          <h3
            class="text-base font-semibold text-[var(--text)]"
          >
            Card 1
          </h3>
        </div>
      </header>
      Content 1
    </div>
    <div
      class="card bg-[var(--surface)] border border-[var(--border)] rounded-[var(--radius-lg)] shadow-card transition-all p-6 "
    >
      <header
        class="flex items-start justify-between gap-3 mb-4"
      >
        <div>
          <h3
            class="text-base font-semibold text-[var(--text)]"
          >
            Card 2
          </h3>
        </div>
      </header>
      Content 2
    </div>
    <div
      class="card bg-[var(--surface)] border border-[var(--border)] rounded-[var(--radius-lg)] shadow-card transition-all p-6 "
    >
      <header
        class="flex items-start justify-between gap-3 mb-4"
      >
        <div>
          <h3
            class="text-base font-semibold text-[var(--text)]"
          >
            Card 3
          </h3>
        </div>
      </header>
      Content 3
    </div>
    <div
      class="card bg-[var(--surface)] border border-[var(--border)] rounded-[var(--radius-lg)] shadow-card transition-all p-6 "
    >
      <header
        class="flex items-start justify-between gap-3 mb-4"
      >
        <div>
          <h3
            class="text-base font-semibold text-[var(--text)]"
          >
            Card 4
          </h3>
        </div>
      </header>
      Content 4
    </div>
  </div>
</div>
`;

exports[`Complex Layout Snapshots > should match snapshot for stats grid 1`] = `
<div>
  <div
    class="grid grid-cols-3 gap-4"
  >
    <div
      aria-label="Gas Saved: $52K+"
      class="landing-stat focus-card"
      role="article"
      tabindex="0"
    >
      <div
        class="landing-stat-value"
      >
        $52K+
      </div>
      <div
        class="landing-stat-label"
      >
        Gas Saved
      </div>
    </div>
    <div
      aria-label="Accuracy: 82%"
      class="landing-stat focus-card"
      role="article"
      tabindex="0"
    >
      <div
        class="landing-stat-value"
      >
        82%
      </div>
      <div
        class="landing-stat-label"
      >
        Accuracy
      </div>
    </div>
    <div
      aria-label="Predictions: 15K+"
      class="landing-stat focus-card"
      role="article"
      tabindex="0"
    >
      <div
        class="landing-stat-value"
      >
        15K+
      </div>
      <div
        class="landing-stat-label"
      >
        Predictions
      </div>
    </div>
  </div>
</div>
`;

exports[`Feedback Component Snapshots > EmptyState > should match snapshot for error type 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-12 px-6 "
  >
    <div
      class="relative mb-6"
    >
      <div
        class="absolute inset-0 bg-gradient-to-br from-cyan-500/10 to-cyan-500/10 rounded-full blur-2xl animate-pulse"
      />
      <div
        class="relative"
      >
        <span
          data-testid="icon-alert"
        >
          ⚠
        </span>
      </div>
    </div>
    <h3
      class="text-xl font-semibold text-gray-100 mb-2 text-center"
    >
      Something Went Wrong
    </h3>
    <p
      class="text-sm text-gray-400 text-center max-w-md mb-6"
    >
      We encountered an issue loading this data. Please try again later.
    </p>
  </div>
</div>
`;

exports[`Feedback Component Snapshots > EmptyState > should match snapshot for no-data type 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-12 px-6 "
  >
    <div
      class="relative mb-6"
    >
      <div
        class="absolute inset-0 bg-gradient-to-br from-cyan-500/10 to-cyan-500/10 rounded-full blur-2xl animate-pulse"
      />
      <div
        class="relative"
      >
        <span
          data-testid="icon-inbox"
        >
          📥
        </span>
      </div>
    </div>
    <h3
      class="text-xl font-semibold text-gray-100 mb-2 text-center"
    >
      No Data Available
    </h3>
    <p
      class="text-sm text-gray-400 text-center max-w-md mb-6"
    >
      There is no data to display at this time.
    </p>
  </div>
</div>
`;

exports[`Feedback Component Snapshots > EmptyState > should match snapshot for no-wallet type 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-12 px-6 "
  >
    <div
      class="relative mb-6"
    >
      <div
        class="absolute inset-0 bg-gradient-to-br from-cyan-500/10 to-cyan-500/10 rounded-full blur-2xl animate-pulse"
      />
      <div
        class="relative"
      >
        <span
          data-testid="icon-wallet"
        >
          💰
        </span>
      </div>
    </div>
    <h3
      class="text-xl font-semibold text-gray-100 mb-2 text-center"
    >
      No Wallet Connected
    </h3>
    <p
      class="text-sm text-gray-400 text-center max-w-md mb-6"
    >
      Connect your wallet to view your transaction history and personalized insights.
    </p>
  </div>
</div>
`;

exports[`Feedback Component Snapshots > EmptyState > should match snapshot with custom content 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-12 px-6 "
  >
    <div
      class="relative mb-6"
    >
      <div
        class="absolute inset-0 bg-gradient-to-br from-cyan-500/10 to-cyan-500/10 rounded-full blur-2xl animate-pulse"
      />
      <div
        class="relative"
      >
        <span
          data-testid="icon-inbox"
        >
          📥
        </span>
      </div>
    </div>
    <h3
      class="text-xl font-semibold text-gray-100 mb-2 text-center"
    >
      Custom Title
    </h3>
    <p
      class="text-sm text-gray-400 text-center max-w-md mb-6"
    >
      Custom description text
    </p>
    <div
      class="mt-2"
    >
      <button
        class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-4 py-2.5 text-sm rounded-lg bg-[var(--accent)] text-white hover:bg-[var(--accent-hover)] shadow-sm shadow-cyan-500/30  "
      >
        <span
          class="whitespace-nowrap"
        >
          Custom Action
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Feedback Component Snapshots > LoadingSpinner > should match snapshot with custom message 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center p-8"
  >
    <div
      class="animate-spin rounded-full h-12 w-12 border-b-2 border-cyan-400"
    />
    <p
      class="mt-4 text-gray-400"
    >
      Fetching data...
    </p>
  </div>
</div>
`;

exports[`Feedback Component Snapshots > LoadingSpinner > should match snapshot with default message 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center p-8"
  >
    <div
      class="animate-spin rounded-full h-12 w-12 border-b-2 border-cyan-400"
    />
    <p
      class="mt-4 text-gray-400"
    >
      Loading...
    </p>
  </div>
</div>
`;

exports[`Skeleton Component Snapshots > should match snapshot for SkeletonCard 1`] = `
<div>
  <div
    class="bg-gray-800/50 rounded-2xl p-6 space-y-3 undefined"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="skeleton animate-pulse rounded-full "
        style="width: 40px; height: 40px;"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 60%;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 40%;"
        />
      </div>
    </div>
    <div
      class="skeleton animate-pulse rounded-lg w-full"
      style="height: 100px;"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="skeleton animate-pulse rounded-lg "
        style="width: 30%; height: 32px;"
      />
      <div
        class="skeleton animate-pulse rounded-lg "
        style="width: 30%; height: 32px;"
      />
    </div>
  </div>
</div>
`;

exports[`Skeleton Component Snapshots > should match snapshot for SkeletonChart 1`] = `
<div>
  <div
    class="bg-gray-800/50 rounded-2xl p-6 space-y-4 undefined"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="skeleton animate-pulse skeleton-text h-4 rounded "
        style="width: 150px; height: 20px;"
      />
      <div
        class="flex gap-2"
      >
        <div
          class="skeleton animate-pulse rounded-lg "
          style="width: 60px; height: 24px;"
        />
        <div
          class="skeleton animate-pulse rounded-lg "
          style="width: 60px; height: 24px;"
        />
      </div>
    </div>
    <div
      class="skeleton animate-pulse rounded-lg w-full"
      style="height: 200px;"
    />
  </div>
</div>
`;

exports[`Skeleton Component Snapshots > should match snapshot for SkeletonList 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      class="flex items-center gap-3 p-3"
    >
      <div
        class="skeleton animate-pulse rounded-full "
        style="width: 32px; height: 32px;"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 70%;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 50%;"
        />
      </div>
      <div
        class="skeleton animate-pulse rounded-lg "
        style="width: 60px; height: 24px;"
      />
    </div>
    <div
      class="flex items-center gap-3 p-3"
    >
      <div
        class="skeleton animate-pulse rounded-full "
        style="width: 32px; height: 32px;"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 70%;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 50%;"
        />
      </div>
      <div
        class="skeleton animate-pulse rounded-lg "
        style="width: 60px; height: 24px;"
      />
    </div>
    <div
      class="flex items-center gap-3 p-3"
    >
      <div
        class="skeleton animate-pulse rounded-full "
        style="width: 32px; height: 32px;"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 70%;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 50%;"
        />
      </div>
      <div
        class="skeleton animate-pulse rounded-lg "
        style="width: 60px; height: 24px;"
      />
    </div>
  </div>
</div>
`;

exports[`Skeleton Component Snapshots > should match snapshot for SkeletonMetrics 1`] = `
<div>
  <div
    class="bg-gray-800/50 rounded-2xl p-6 space-y-4 undefined"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="skeleton animate-pulse skeleton-text h-4 rounded "
        style="width: 120px; height: 20px;"
      />
      <div
        class="skeleton animate-pulse rounded-lg "
        style="width: 80px; height: 28px;"
      />
    </div>
    <div
      class="grid grid-cols-2 gap-3"
    >
      <div
        class="bg-gray-900/50 rounded-lg p-3 space-y-2"
      >
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 60%; height: 12px;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 80%; height: 24px;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 50%; height: 10px;"
        />
      </div>
      <div
        class="bg-gray-900/50 rounded-lg p-3 space-y-2"
      >
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 60%; height: 12px;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 80%; height: 24px;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 50%; height: 10px;"
        />
      </div>
      <div
        class="bg-gray-900/50 rounded-lg p-3 space-y-2"
      >
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 60%; height: 12px;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 80%; height: 24px;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 50%; height: 10px;"
        />
      </div>
      <div
        class="bg-gray-900/50 rounded-lg p-3 space-y-2"
      >
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 60%; height: 12px;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 80%; height: 24px;"
        />
        <div
          class="skeleton animate-pulse skeleton-text h-4 rounded "
          style="width: 50%; height: 10px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Skeleton Component Snapshots > should match snapshot for basic skeleton 1`] = `
<div>
  <div>
    <div
      class="skeleton animate-pulse skeleton-text h-4 rounded "
      style="width: 100%;"
    />
    <div
      class="skeleton animate-pulse rounded-lg "
      style="width: 200px; height: 100px;"
    />
    <div
      class="skeleton animate-pulse rounded-full "
      style="width: 40px; height: 40px;"
    />
  </div>
</div>
`;

exports[`UI Component Snapshots > Badge > should match snapshot for all variants 1`] = `
<div>
  <div>
    <span
      class="inline-flex items-center gap-1 px-2.5 py-1 rounded-full text-xs font-semibold bg-[var(--accent-light)] text-[var(--accent)] border border-[var(--accent-border)] "
    >
      Accent
    </span>
    <span
      class="inline-flex items-center gap-1 px-2.5 py-1 rounded-full text-xs font-semibold bg-[var(--success-bg)] text-[var(--success)] border border-[var(--success-border)] "
    >
      Success
    </span>
    <span
      class="inline-flex items-center gap-1 px-2.5 py-1 rounded-full text-xs font-semibold bg-[var(--warning-bg)] text-[var(--warning)] border border-[var(--warning-border)] "
    >
      Warning
    </span>
    <span
      class="inline-flex items-center gap-1 px-2.5 py-1 rounded-full text-xs font-semibold bg-[var(--danger-bg)] text-[var(--danger)] border border-[var(--danger-border)] "
    >
      Danger
    </span>
    <span
      class="inline-flex items-center gap-1 px-2.5 py-1 rounded-full text-xs font-semibold bg-[var(--surface-2)] text-[var(--text-secondary)] border border-[var(--border)] "
    >
      Neutral
    </span>
  </div>
</div>
`;

exports[`UI Component Snapshots > Button > should match snapshot for all sizes 1`] = `
<div>
  <div>
    <button
      class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-3 py-2 text-sm rounded-md bg-[var(--accent)] text-white hover:bg-[var(--accent-hover)] shadow-sm shadow-cyan-500/30  "
    >
      <span
        class="whitespace-nowrap"
      >
        Small
      </span>
    </button>
    <button
      class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-4 py-2.5 text-sm rounded-lg bg-[var(--accent)] text-white hover:bg-[var(--accent-hover)] shadow-sm shadow-cyan-500/30  "
    >
      <span
        class="whitespace-nowrap"
      >
        Medium
      </span>
    </button>
    <button
      class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-5 py-3 text-base rounded-xl bg-[var(--accent)] text-white hover:bg-[var(--accent-hover)] shadow-sm shadow-cyan-500/30  "
    >
      <span
        class="whitespace-nowrap"
      >
        Large
      </span>
    </button>
  </div>
</div>
`;

exports[`UI Component Snapshots > Button > should match snapshot for outline variant 1`] = `
<div>
  <button
    class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-4 py-2.5 text-sm rounded-lg border border-[var(--accent-border)] text-[var(--accent)] hover:bg-[var(--accent-light)]  "
  >
    <span
      class="whitespace-nowrap"
    >
      Outline Button
    </span>
  </button>
</div>
`;

exports[`UI Component Snapshots > Button > should match snapshot for primary variant 1`] = `
<div>
  <button
    class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-4 py-2.5 text-sm rounded-lg bg-[var(--accent)] text-white hover:bg-[var(--accent-hover)] shadow-sm shadow-cyan-500/30  "
  >
    <span
      class="whitespace-nowrap"
    >
      Primary Button
    </span>
  </button>
</div>
`;

exports[`UI Component Snapshots > Button > should match snapshot for secondary variant 1`] = `
<div>
  <button
    class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-4 py-2.5 text-sm rounded-lg bg-[var(--surface-2)] text-[var(--text)] border border-[var(--border)] hover:border-[var(--accent-border)]  "
  >
    <span
      class="whitespace-nowrap"
    >
      Secondary Button
    </span>
  </button>
</div>
`;

exports[`UI Component Snapshots > Button > should match snapshot when disabled 1`] = `
<div>
  <button
    class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-4 py-2.5 text-sm rounded-lg bg-[var(--accent)] text-white hover:bg-[var(--accent-hover)] shadow-sm shadow-cyan-500/30  "
    disabled=""
  >
    <span
      class="whitespace-nowrap"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`UI Component Snapshots > Button > should match snapshot when loading 1`] = `
<div>
  <button
    class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-4 py-2.5 text-sm rounded-lg bg-[var(--accent)] text-white hover:bg-[var(--accent-hover)] shadow-sm shadow-cyan-500/30  "
  >
    <span
      class="whitespace-nowrap"
    >
      Loading
    </span>
  </button>
</div>
`;

exports[`UI Component Snapshots > Card > should match snapshot with action button 1`] = `
<div>
  <div
    class="card bg-[var(--surface)] border border-[var(--border)] rounded-[var(--radius-lg)] shadow-card transition-all p-6 "
  >
    <header
      class="flex items-start justify-between gap-3 mb-4"
    >
      <div>
        <h3
          class="text-base font-semibold text-[var(--text)]"
        >
          Card with Action
        </h3>
      </div>
      <div
        class="shrink-0"
      >
        <button
          class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-3 py-2 text-sm rounded-md bg-[var(--accent)] text-white hover:bg-[var(--accent-hover)] shadow-sm shadow-cyan-500/30  "
        >
          <span
            class="whitespace-nowrap"
          >
            Action
          </span>
        </button>
      </div>
    </header>
    <p>
      Content
    </p>
  </div>
</div>
`;

exports[`UI Component Snapshots > Card > should match snapshot with title and content 1`] = `
<div>
  <div
    class="card bg-[var(--surface)] border border-[var(--border)] rounded-[var(--radius-lg)] shadow-card transition-all p-6 "
  >
    <header
      class="flex items-start justify-between gap-3 mb-4"
    >
      <div>
        <h3
          class="text-base font-semibold text-[var(--text)]"
        >
          Card Title
        </h3>
        <p
          class="text-sm text-[var(--text-secondary)] mt-1"
        >
          Card subtitle
        </p>
      </div>
    </header>
    <p>
      Card content goes here
    </p>
  </div>
</div>
`;

exports[`UI Component Snapshots > Chip > should match snapshot 1`] = `
<div>
  <div>
    <span
      class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-[var(--surface-2)] border border-[var(--border)] text-sm text-[var(--text)] "
    >
      Default
    </span>
    <span
      class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-[var(--surface-2)] border border-[var(--border)] text-sm text-[var(--text)] "
    >
      Active
    </span>
    <span
      class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-[var(--surface-2)] border border-[var(--border)] text-sm text-[var(--text)] "
    >
      With Count
    </span>
  </div>
</div>
`;

exports[`UI Component Snapshots > SectionHeader > should match snapshot with all props 1`] = `
<div>
  <div
    class="flex flex-col gap-2 w-full"
  >
    <div
      class="flex w-full items-start justify-between gap-2"
    >
      <div
        class=""
      >
        <span
          class="text-xs font-semibold uppercase tracking-[0.12em] text-[var(--text-muted)]"
        >
          Overview
        </span>
        <h2
          class="text-2xl font-semibold text-[var(--text)] leading-tight"
        >
          Dashboard Title
        </h2>
        <p
          class="text-[var(--text-secondary)] mt-2 max-w-2xl"
        >
          This is a description of the section
        </p>
      </div>
      <div
        class="shrink-0"
      >
        <button
          class="btn-reset inline-flex items-center justify-center gap-2 font-semibold transition-all duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--bg)] px-3 py-2 text-sm rounded-md bg-[var(--accent)] text-white hover:bg-[var(--accent-hover)] shadow-sm shadow-cyan-500/30  "
        >
          <span
            class="whitespace-nowrap"
          >
            View All
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UI Component Snapshots > SectionHeader > should match snapshot with center alignment 1`] = `
<div>
  <div
    class="flex flex-col items-center text-center w-full"
  >
    <div
      class="flex w-full items-start justify-between gap-2"
    >
      <div
        class="w-full"
      >
        <h2
          class="text-2xl font-semibold text-[var(--text)] leading-tight"
        >
          Centered Title
        </h2>
        <p
          class="text-[var(--text-secondary)] mt-2 max-w-2xl"
        >
          Centered description
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UI Component Snapshots > Stat > should match snapshot with all props 1`] = `
<div>
  <div>
    <div
      aria-label="Gas Saved: $52K+"
      class="landing-stat focus-card"
      role="article"
      tabindex="0"
    >
      <div
        class="landing-stat-value"
      >
        $52K+
      </div>
      <div
        class="landing-stat-label"
      >
        Gas Saved
      </div>
      <div
        class="text-xs mt-1 text-green-400"
      >
        +3.2% today
      </div>
    </div>
    <div
      aria-label="Accuracy: 82%"
      class="landing-stat focus-card"
      role="article"
      tabindex="0"
    >
      <div
        class="landing-stat-value"
      >
        82%
      </div>
      <div
        class="landing-stat-label"
      >
        Accuracy
      </div>
      <div
        class="text-xs mt-1 text-gray-400"
      >
        rolling 30d
      </div>
    </div>
    <div
      aria-label="Predictions: 15K+"
      class="landing-stat focus-card"
      role="article"
      tabindex="0"
    >
      <div
        class="landing-stat-value"
      >
        15K+
      </div>
      <div
        class="landing-stat-label"
      >
        Predictions
      </div>
    </div>
  </div>
</div>
`;
